<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/np_dictionary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@id/np_dictionary"
        android:text="@string/account"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/inputAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/np_dictionary"
        android:layout_alignParentRight="true"
        android:layout_marginTop="100dp"
        android:layout_marginRight="60dp"
        android:ellipsize="end"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/mail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@id/account"
        android:text="@string/password"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/account"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:layout_marginRight="60dp"
        android:ellipsize="end"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/inputPassword"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:linksClickable="true"
        android:text="@string/register"
        android:textSize="20sp" />

    <Button
        android:id="@+id/loginIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/loginIn"
        android:textSize="20sp" />





</RelativeLayout>